# satysfi-fonts-haranoaji

./: .gitignore  README.md  Satyristes  fonts.satysfi-hash  satysfi-font-haranoaji-doc.opam  satysfi-font-haranoaji.opam  satysfi-fonts-haranoaji-doc.opam  satysfi-fonts-haranoaji.opam
doc/: fonts-haranoaji-manual-en.saty  fonts-haranoaji-manual-ja.saty  manual.saty
src/: font-haranoaji.satyh
