opam-version: "2.0"
name: "satysfi-font-haranoaji-doc"
version: "1.0.0"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "OFL-1.1" # Choose what you want
homepage: "https://github.com/<github-username>/satysfi-font-haranoaji"
dev-repo: "git+https://github.com/<github-username>/satysfi-font-haranoaji.git"
bug-reports: "https://github.com/<github-username>/satysfi-font-haranoaji/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-font-haranoaji" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "font-haranoaji-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "font-haranoaji-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
