opam-version: "2.0"
name: "satysfi-font-haranoaji"
version: "1.0.0"
synopsis: "A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "OFL-1.1"
homepage: "https://github.com/<github-username>/satysfi-font-haranoaji"
dev-repo: "git+https://github.com/<github-username>/satysfi-font-haranoaji.git"
bug-reports: "https://github.com/<github-username>/satysfi-font-haranoaji/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "font-haranoaji"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "font-haranoaji"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
