opam-version: "2.0"
name: "satysfi-fonts-haranoaji-doc"
version: "1.0.0"
synopsis: "Document of SATySFi Font Package for Masamichi Hosoda's Harano Aji Fonts"
description: """
Document of SATySFi Font Package for Masamichi Hosoda's Harano Aji Fonts
"""
maintainer: "Conashimi Momota momota.ry2@gmail.com"
authors: "Conashimi Momota momota.ry2@gmail.com"
license: "OFL-1.1" # Choose what you want
homepage: "https://github.com/momota1029/satysfi-fonts-haranoaji"
dev-repo: "git+https://github.com/momota1029/satysfi-fonts-haranoaji.git"
bug-reports: "https://github.com/momota1029/satysfi-fonts-haranoaji/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-fonts-haranoaji" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fonts-haranoaji-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-haranoaji-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
